# cog_publisher

./: .travis.yml  CHANGELOG.rst  CMakeLists.txt  LICENCE.md  README.md  package.xml
config/: cog_publisher.yaml  fake_cog_publisher.yaml
include/: cog_publisher.h  gazebo_cog_publisher_plugin.h  load_params.h  robot_link.h
include/cog_publisher/: cog_publisher.h  robot_link.h
launch/: cog_publisher.launch  fake_cog_publisher.launch
src/: cog_publisher.cpp  cog_publisher_node.cpp  fake_cog_publisher_node.cpp  gazebo_cog_publisher_plugin.cpp  robot_link.cpp
